# starknet-foundry

./: .env  .env.example  .env.template  .gitattributes  .gitignore  .gitmodules  .tool-versions  CAIRO_NATIVE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  NATIVE_INSTALLATION.md  README.md  RELEASING.md  ROADMAP.md  _typos.toml  check_prs.sh  env.sh  rust-toolchain.toml  typesafe_declare.md
crates/cast/: .gitignore  Cargo.toml  README.md
crates/cast/src/: lib.rs  main.rs  script.rs
crates/cast/src/helpers/: build.rs  constants.rs  mod.rs  response_structs.rs  scarb_utils.rs
crates/cast/src/starknet_commands/: call.rs  declare.rs  deploy.rs  invoke.rs  mod.rs  script.rs  show_config.rs  verify.rs
crates/cast/tests/e2e/: call.rs  declare.rs  deploy.rs  invoke.rs  main_tests.rs  mod.rs  script.rs  scripts.rs  show_config.rs
crates/cast/tests/helpers/: constants.rs  devnet.rs  fixtures.rs  runner.rs
crates/cheatable-starknet/: Cargo.toml
crates/cheatable-starknet/src/: cheatcodes.rs  constants.rs  lib.rs  rpc.rs
crates/cheatnet/: Cargo.toml  build.rs
crates/cheatnet/predeployed-contracts/: account_cairo1.casm.json
crates/cheatnet/src/: blockifier_structs.rs  cheatcodes.rs  constants.rs  contract_print.rs  conversions.rs  data.rs  forking.rs  lib.rs  panic_data.rs  predeployment.rs  rpc.rs  state.rs  sync_client.rs  trace_data.rs
crates/cheatnet/tests/: README.md  common.rs  main.rs
crates/conversions/: Cargo.toml
crates/conversions/cairo-serde-macros/: Cargo.toml
crates/conversions/src/: biguint.rs  byte_array.rs  bytes31.rs  class_hash.rs  contract_address.rs  dec_string.rs  entrypoint_selector.rs  eth_address.rs  felt.rs  felt252.rs  field_element.rs  lib.rs  non_zero_felt.rs  non_zero_u128.rs  non_zero_u64.rs  nonce.rs  padded_felt.rs  primitive.rs  serde.rs  short_string.rs  sierra_class.rs  stark_felt.rs  string.rs  u256.rs  u384.rs  u512.rs  u96.rs
crates/conversions/tests/: class_hash.rs  contract_address.rs  derive_cairo_deserialize.rs  derive_cairo_serialize.rs  felt252.rs  field_elements.rs  main.rs  nonce.rs  short_string.rs  stark_felt.rs  stark_hash.rs
crates/data-transformer/: ARCHITECTURE.md  Cargo.toml
crates/data-transformer/src/: calldata.rs  lib.rs  transformer.rs
crates/data-transformer/tests/: bytes31.rs  integration.rs  u384.rs  u96.rs
crates/debugging/: Cargo.toml
crates/debugging/src/: contracts_data.rs  contracts_data_store.rs  lib.rs  trace.rs  verbosity.rs
crates/docs/: Cargo.toml
crates/docs/src/: lib.rs  snippet.rs  utils.rs  validation.rs
crates/forge/: Cargo.toml
crates/forge-runner/: Cargo.toml
crates/forge-runner/src/: backtrace.rs  build_trace_data.rs  cairo_runner.rs  compiled_runnable.rs  context_data.rs  contracts_data.rs  coverage_api.rs  debugging.rs  expected_result.rs  filtering.rs  forge_config.rs  forge_runtime_extension.rs  fuzzer.rs  gas.rs  lib.rs  messages.rs  package_tests.rs  partition.rs  printing.rs  profiler_api.rs  running.rs  runtime.rs  scarb.rs  sierra_casm_runner.rs  sierra_casm_runner_gas.rs  sierra_test_code_path.rs  test_case_setup.rs  test_case_summary.rs  test_crate_summary.rs  test_execution_syscall_handler.rs  test_target_summary.rs  tests_summary.rs  trace_data.rs
crates/forge/benches/: README.md  main.rs  my_benchmark.rs
crates/forge/src/: block_number_map.rs  cheatcodes_hint_processor.rs  clean.rs  collecting.rs  collector_structs.rs  combine_configs.rs  compatibility_check.rs  compiled_raw.rs  fuzzer.rs  init.rs  lib.rs  main.rs  new.rs  partition.rs  pretty_printing.rs  run_tests.rs  running.rs  scarb.rs  scarb_test_collector.rs  shared_cache.rs  sierra_casm_runner.rs  test.rs  test_case_summary.rs  test_crate_summary.rs  test_execution_syscall_handler.rs  test_file_summary.rs  test_filter.rs  tests_partition.rs  tests_to_run.rs  trace_data.rs  warn.rs
crates/forge/test_utils/: Cargo.toml
crates/forge/tests/: code_quality.rs  main.rs
crates/forge/utils/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/macros/: Cargo.toml
crates/runtime/src/: context.rs  forge_runtime_extension.rs  io_runtime_extension.rs  lib.rs  native.rs  utils.rs  vm.rs
crates/runtime/tests/: derive_from_reader.rs
crates/scarb-api/: Cargo.toml
crates/scarb-api/src/: artifacts.rs  command.rs  contracts.rs  lib.rs  manifest.rs  metadata.rs  metadata_command.rs  output_transform.rs  version.rs  version_command.rs
crates/scarb-artifacts/: Cargo.toml
crates/scarb-artifacts/src/: command.rs  lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: auto_completions.rs  command.rs  consts.rs  lib.rs  print.rs  rpc.rs  spinner.rs  utils.rs  vm.rs
crates/sierra-analyzer/: Cargo.toml
crates/sierra-analyzer/src/: config.rs  lib.rs  provider.rs  sierra_program.rs
crates/sierra-analyzer/tests/: decompiler.rs  detectors.rs  dotgraph.rs  symbolic_execution.rs
crates/sierra-casm/: Cargo.toml
crates/sierra-casm/src/: lib.rs
crates/sierra-casm/tests/: compilation.rs
crates/sncast/: .gitignore  Cargo.toml  README.md  normalized.txt
crates/sncast/.cargo/: config.toml
crates/sncast/src/: lib.rs  main.rs  state.rs
crates/sncast/tests/: code_quality.rs  main.rs
crates/snforge-scarb-plugin/: Cargo.toml  Scarb.toml  clippy.toml
crates/snforge-scarb-plugin/src/: args.rs  asserts.rs  attributes.rs  cairo_expression.rs  common.rs  config_fn.rs  config_statement.rs  derives.rs  external_inputs.rs  inline_macros.rs  lib.rs  parse.rs  types.rs  utils.rs  validate.rs
crates/test-collector/: Cargo.toml
crates/test-collector/src/: lib.rs  plugin.rs  project.rs
crates/universal-sierra-compiler-api/: Cargo.toml
crates/universal-sierra-compiler-api/src/: command.rs  compile.rs  lib.rs  representation.rs  spinner.rs  utils.rs
starknet-foundry/: Cargo.toml  Cross.toml
starknet-foundry/crates/cast/: .gitignore  Cargo.toml  README.md
starknet-foundry/crates/cheatable-starknet/: Cargo.toml
starknet-foundry/crates/forge/: Cargo.toml
starknet-foundry/crates/scarb/: Cargo.toml
starknet-foundry/crates/test-collector/: Cargo.toml
(+3327 files in other folders)
