[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/forge",
    "crates/forge-runner",
    "crates/sncast",
    "crates/cheatnet",
    "crates/conversions",
    "crates/conversions/cairo-serde-macros",
    "crates/data-transformer",
    "crates/runtime",
    "crates/scarb-api",
    "crates/configuration",
    "crates/universal-sierra-compiler-api",
    "crates/docs",
    "crates/debugging"
]

exclude = ["crates/snforge-scarb-plugin"]

[workspace.package]
version = "0.39.0"
edition = "2024"
repository = "https://github.com/foundry-rs/starknet-foundry"
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
blockifier = { git = "https://github.com/cptartur/sequencer.git", branch = "main-v0.13.4", default-features = false, features = ["testing"] }
starknet_api = { git = "https://github.com/cptartur/sequencer.git", branch = "main-v0.13.4" }
cairo-lang-casm = { version = "2.11.2", features = ["serde"] }
cairo-lang-runner = "2.11.2"
cairo-lang-sierra-to-casm = "2.11.2"
cairo-lang-sierra = "2.11.2"
cairo-lang-utils = "2.11.2"
cairo-lang-starknet = "2.11.2"
cairo-lang-runnable-utils = "2.11.2"
cairo-lang-filesystem = "2.11.2"
cairo-lang-diagnostics = "2.11.2"
cairo-lang-sierra-type-size = "2.11.2"
cairo-lang-syntax = "2.11.2"
cairo-lang-test-plugin = "2.11.2"
cairo-lang-starknet-classes = "2.11.2"
cairo-lang-parser = "2.11.2"
cairo-vm = "1.0.2"
cairo-annotations = "0.3.1"
dirs = "6.0.0"
dialoguer = "0.11.0"
starknet-types-core = { version = "0.1.7", features = ["hash", "prime-bigint"] }
anyhow = "1.0.97"
assert_fs = "1.1.2"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.46"
console = "0.15.11"
include_dir = "0.7.4"
indoc = "2"
itertools = "0.14.0"
num-traits = "0.2.19"
rayon = "1.10"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "92e3ed9" }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "92e3ed9" }
tempfile = "3.18.0"
thiserror = "2.0.12"
ctor = "0.4.1"
url = { "version" = "2.5.4", "features" = ["serde"] }
tokio = { version = "1.44.0", features = ["full"] }
futures = "0.3.31"
num-bigint = { version = "0.4.6", features = ["rand"] }
walkdir = "2.5.0"
rand = "0.8.5"
project-root = "0.2.2"
which = "7.0.2"
conversions = { path = "./crates/conversions" }
shared = { path = "./crates/shared" }
docs = { path = "./crates/docs" }
test-case = "3.3.1"
scarb-metadata = "1.14.0"
flatten-serde-json = "0.1.0"
snapbox = "0.4.17"
scarb-ui = "0.1.5"
semver = "1.0.26"
bimap = "0.6.3"
primitive-types = "0.13.1"
shellexpand = "3.1.0"
toml = "0.8.20"
rpassword = "7.3.1"
promptly = "0.3.1"
ptree = "0.5.2"
reqwest = "0.12.14"
fs_extra = "1.3.0"
openssl = { version = "0.10", features = ["vendored"] }
toml_edit = "0.22.24"
axum = "0.8.1"
lazy_static = "1.5.0"
fs2 = "0.4.3"
flate2 = "1.1.0"
k256 = { version = "0.13.4", features = ["sha256", "ecdsa", "serde"] }
p256 = { version = "0.13.2", features = ["sha256", "ecdsa", "serde"] }
glob = "0.3.2"
sha3 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }
async-trait = "0.1.87"
serde_path_to_error = "0.1.17"
wiremock = "0.6.3"
const-hex = "1.14.0"
indicatif = "0.17.11"
shell-words = "1.1.0"
sanitize-filename = "0.6.0"
