[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/forge",
    "crates/forge-runner",
    "crates/sncast",
    "crates/cheatnet",
    "crates/conversions",
    "crates/conversions/cairo-serde-macros",
    "crates/data-transformer",
    "crates/runtime",
    "crates/scarb-api",
    "crates/configuration",
    "crates/universal-sierra-compiler-api",
    "crates/docs",
    "crates/debugging",
    "crates/testing/packages_validation",
    "crates/foundry-ui",
]

exclude = ["crates/snforge-scarb-plugin", "crates/snforge-scarb-plugin-deprecated"]

[workspace.package]
version = "0.48.1"
edition = "2024"
repository = "https://github.com/foundry-rs/starknet-foundry"
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
blockifier = { git = "https://github.com/MKowalski8/sequencer.git", branch = "main-v0.14.0-fork", features = ["testing", "tracing", "cairo_native"] }
apollo_compile_to_native = { git = "https://github.com/MKowalski8/sequencer.git", branch = "main-v0.14.0-fork" }
bigdecimal = "0.4.8"
starknet_api = { git = "https://github.com/MKowalski8/sequencer.git", branch = "main-v0.14.0-fork" }
cairo-native = { git = "https://github.com/lambdaclass/cairo_native.git", rev = "d7f8352657a4c1228b227807b90aea10f97f746d" }
cairo-lang-casm = { version = "2.12.0", features = ["serde"] }
cairo-lang-sierra = "2.12.0"
cairo-lang-utils = "2.12.0"
cairo-lang-starknet = "2.12.0"
cairo-lang-filesystem = "2.12.0"
cairo-lang-diagnostics = "2.12.0"
cairo-lang-sierra-type-size = "2.12.0"
cairo-lang-syntax = "2.12.0"
cairo-lang-test-plugin = "2.12.0"
cairo-lang-starknet-classes = "2.12.0"
cairo-lang-parser = "2.12.0"
cairo-lang-sierra-to-casm = "2.12.0"
cairo-vm = "=2.3.1"
cairo-annotations = "0.5.2"
dirs = "6.0.0"
dialoguer = "0.11.0"
starknet-types-core = { version = "0.1.8", features = ["hash", "prime-bigint"] }
anyhow = "1.0.97"
assert_fs = "1.1.2"
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.39", features = ["derive", "deprecated"] }
clap_complete = "4.5.52"
console = "0.15.11"
include_dir = "0.7.4"
indoc = "2"
itertools = "0.14.0"
indexmap = "2.9.0"
num-traits = "0.2.19"
rayon = "1.10"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "ea064f0b51655e4c7b3d382315f0d83cfa17393b"}
starknet-crypto = "0.7.4"
tempfile = "3.20.0"
thiserror = "2.0.12"
ctor = "0.4.1"
url = { "version" = "2.5.4", "features" = ["serde"] }
tokio = { version = "1.44.0", features = ["full"] }
futures = "0.3.31"
num-bigint = { version = "0.4.6", features = ["rand"] }
walkdir = "2.5.0"
rand = "0.8.5"
project-root = "0.2.2"
which = "7.0.2"
conversions = { path = "./crates/conversions" }
shared = { path = "./crates/shared" }
docs = { path = "./crates/docs" }
test-case = "3.3.1"
scarb-metadata = "1.14.0"
flatten-serde-json = "0.1.0"
snapbox = "0.4.17"
scarb-ui = "0.1.7"
semver = "1.0.26"
bimap = "0.6.3"
primitive-types = "0.13.1"
shellexpand = "3.1.0"
toml = "0.8.20"
rpassword = "7.3.1"
promptly = "0.3.1"
ptree = "0.5.2"
reqwest = { version = "0.12.21", features = ["json"] }
fs_extra = "1.3.0"
openssl = { version = "0.10", features = ["vendored"] }
toml_edit = "0.22.24"
axum = "0.8.1"
fs2 = "0.4.3"
flate2 = "1.1.0"
k256 = { version = "0.13.4", features = ["sha256", "ecdsa", "serde"] }
p256 = { version = "0.13.2", features = ["sha256", "ecdsa", "serde"] }
glob = "0.3.2"
sha3 = "0.10.8"
base16ct = { version = "0.2.0", features = ["alloc"] }
async-trait = "0.1.87"
serde_path_to_error = "0.1.17"
wiremock = "0.6.3"
const-hex = "1.14.1"
indicatif = "0.17.11"
shell-words = "1.1.0"
sanitize-filename = "0.6.0"
derive_more = { version = "2.0.1", features = ["display"] }
paste = "1.0.15"
strum = "0.27"
strum_macros = "0.27"
scarb-oracle-hint-service = { git = "https://github.com/software-mansion/scarb", rev = "210da8dfd0b370f0f1970b33a373f1a7afe6ae33" }
