[workspace]
members = [
    "crates/forge",
    "crates/test-collector",
    "crates/cast",
    "crates/compatibility/cairo-felt-blockifier",
    "crates/compatibility/cairo-felt-compiler",
    "crates/compatibility/cairo-vm-blockifier",
    "crates/compatibility/cairo-vm-compiler",
    "crates/cheatable-starknet"
]

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/foundry-rs/starknet-foundry"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
