[workspace]
members = [
    "crates/forge",
    "crates/test-collector",
    "crates/cast",
    "crates/compatibility/cairo-felt-blockifier",
    "crates/cheatable-starknet"
]

[workspace.package]
name = "starknet-foundry"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/foundry-rs/starknet-foundry"
license = "Apache-2.0"
license-file = "LICENSE"

[workspace.dependencies]
blockifier = { git = "https://github.com/starkware-libs/blockifier.git", rev = "9238b4d" }
starknet_api = { git = "https://github.com/starkware-libs/starknet-api", rev = "a4c78ff" }
cairo-lang-casm = { path = "../cairo/crates/cairo-lang-casm", version = "2.0.0-rc2" }
cairo-lang-runner = { path = "../cairo/crates/cairo-lang-runner", version = "2.0.0-rc2" }
anyhow = "1.0.66"
camino = { version = "1.1.4", features = ["serde1"] }
include_dir = "0.7.3"
tempfile = "3.6.0"
rayon = "1.7"

