[package]
name = "cast"
description = "Cast - a Starknet Foundry CLI client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet.workspace = true
tokio.workspace = true
url.workspace = true
rand.workspace = true
project-root.workspace = true
which.workspace = true
scarb-metadata = "=1.4.2"
primitive-types = "0.12.1"
shellexpand = "3.1.0"
toml = "0.7.6"
rpassword = "7.2.0"
assert_fs.workspace = true
blockifier.workspace = true
include_dir.workspace = true
indoc.workspace = true
starknet_api.workspace = true
tempfile.workspace = true
rayon.workspace = true
test-collector = { path = "../test-collector" }
cheatnet = { path = "../cheatnet" }
conversions = { path = "../conversions" }
cairo-lang-runner.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
itertools.workspace = true
regex.workspace = true
thiserror.workspace = true
num-traits.workspace = true
schemars = { version = "0.8.12", features = ["preserve_order"] }
parity-scale-codec = "3.5.0"
parity-scale-codec-derive = "3.1.4"
num-bigint.workspace = true
cairo-felt = "0.8.1"
walkdir = "2.3.3"
scarb-ui = { git = "https://github.com/software-mansion/scarb.git", rev = "58cc88e" }
snapbox = "0.4.11"
once_cell = "1.18.0"
cairo-vm = "0.8.1"
ark-ff = "0.4.0-alpha.7"
ark-std = "0.4.0"
ark-secp256k1 = "0.4.0"
ark-secp256r1 = "0.4.0"
openssl = { version = "0.10", features = ["vendored"] }
toml_edit = "0.9.1"
flatten-serde-json = "0.1.0"

cairo-lang-debug.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-lowering.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-project.workspace = true
cairo-lang-sierra-ap-change.workspace = true
cairo-lang-sierra-gas.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-sierra-generator.workspace = true
cairo-lang-syntax.workspace = true

[dev-dependencies]
ctor.workspace = true
snapbox = "0.4.13"
indoc.workspace = true
reqwest = "0.11.18"
tempfile = "3.8.0"
test-case.workspace = true
fs_extra = "1.3.0"
sealed_test = "1.0.0"
dotenv = "0.15.0"

[[bin]]
name = "sncast"
path = "src/main.rs"
