[package]
name = "cast"
description = "Cast - a Starknet Foundry CLI client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet.workspace = true
tokio.workspace = true
url.workspace = true
rand.workspace = true
project-root.workspace = true
which.workspace = true
scarb-metadata = "=1.4.2"
primitive-types = "0.12.1"
shellexpand = "3.1.0"
toml = "0.7.6"
rpassword = "7.2.0"
blockifier.workspace = true
cheatnet = { path = "../cheatnet" }
conversions = { path = "../conversions" }
cairo-lang-runner.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
itertools.workspace = true
num-traits.workspace = true
cairo-felt = "0.8.1"
cairo-vm = "0.8.1"
cairo-lang-diagnostics.workspace = true
cairo-lang-sierra-generator.workspace = true

[dev-dependencies]
ctor.workspace = true
snapbox = "0.4.13"
indoc.workspace = true
reqwest = "0.11.18"
tempfile = "3.8.0"
test-case.workspace = true
fs_extra = "1.3.0"
sealed_test = "1.0.0"
dotenv = "0.15.0"

[[bin]]
name = "sncast"
path = "src/main.rs"
