[package]
name = "cheatable-starknet"
version = "1.0.0"
edition = "2021"

[features]
testing = []

[dependencies]
anyhow.workspace = true
blockifier.workspace = true
camino.workspace = true
include_dir.workspace = true
starknet_api.workspace = true
cairo-felt.workspace = true
tempfile.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-runner.workspace = true
cairo-vm.workspace = true

[lib]
name = "cheatable_starknet"
