[package]
name = "cheatnet"
version = "1.0.0"
edition.workspace = true

[features]
testing = []

[dependencies]
anyhow.workspace = true
blockifier.workspace = true
camino.workspace = true
starknet_api.workspace = true
cairo-felt.workspace = true
tempfile.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-starknet.workspace = true
cairo-vm.workspace = true
regex.workspace = true
starknet.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
flatten-serde-json.workspace = true
num-traits.workspace = true
url.workspace = true
tokio.workspace = true
num-bigint.workspace = true
conversions.workspace = true
scarb-metadata.workspace = true
fs2 = "0.4.3"
flate2 = "1.0.27"
scarb-api = { path = "../scarb-api" }
runtime = { path = "../runtime" }
k256 = { version = "0.13.2", features = ["sha256", "ecdsa", "serde"] }
p256 = { version = "0.13.2", features = ["sha256", "ecdsa", "serde"] }
sierra-casm = { path = "../sierra-casm" }

[dev-dependencies]
ctor.workspace = true
indoc.workspace = true
rayon.workspace = true
glob = "0.3.1"
test-case.workspace = true
