[package]
name = "cheatnet"
version.workspace = true
edition.workspace = true

[features]
testing = []

[dependencies]
anyhow.workspace = true
blockifier.workspace = true
bimap.workspace = true
camino.workspace = true
starknet_api.workspace = true
starknet-types-core.workspace = true
starknet-crypto.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-vm.workspace = true
cairo-annotations.workspace = true
regex.workspace = true
indoc.workspace = true
starknet.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
flatten-serde-json.workspace = true
num-traits.workspace = true
url.workspace = true
rayon.workspace = true
tokio.workspace = true
num-bigint.workspace = true
conversions.workspace = true
fs2.workspace = true
flate2.workspace = true
data-transformer = { path = "../data-transformer" }
scarb-api = { path = "../scarb-api" }
runtime = { path = "../runtime" }
universal-sierra-compiler-api = { path = "../universal-sierra-compiler-api" }
k256.workspace = true
p256.workspace = true
shared.workspace = true
rand.workspace = true

[dev-dependencies]
ctor.workspace = true
indoc.workspace = true
rayon.workspace = true
glob.workspace = true
test-case.workspace = true
tempfile.workspace = true
