[package]
name = "conversions"
version = "1.0.0"
edition.workspace = true

[features]
testing = []

[dependencies]
anyhow.workspace = true
blockifier.workspace = true
starknet_api.workspace = true
cairo-felt.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-starknet.workspace = true
cairo-vm.workspace = true
regex.workspace = true
starknet.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
num-traits.workspace = true

[dev-dependencies]
ctor.workspace = true
indoc.workspace = true

[lib]
name = "conversions"
