[package]
name = "conversions"
version = "1.0.0"
edition.workspace = true

[features]
testing = []

[dependencies]
anyhow.workspace = true
blockifier.workspace = true
starknet_api.workspace = true
starknet-types-core.workspace = true
cairo-lang-utils.workspace = true
cairo-vm.workspace = true
starknet.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
num-traits.workspace = true
itertools.workspace = true
cairo-serde-macros = { path = "cairo-serde-macros" }

