[package]
name = "data-transformer"
version = "1.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet.workspace = true
starknet-types-core.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-parser.workspace = true
cairo-lang-syntax.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-filesystem.workspace = true
itertools.workspace = true
num-bigint.workspace = true
test-case.workspace = true
thiserror.workspace = true
conversions = { path = "../conversions" }
cairo-serde-macros = { path = "../conversions/cairo-serde-macros" }

[dev-dependencies]
indoc.workspace = true
primitive-types.workspace = true
tokio.workspace = true
url.workspace = true
