[package]
name = "debugging"
version = "1.0.0"
edition.workspace = true

[dependencies]
starknet_api.workspace = true
blockifier.workspace = true
ptree.workspace = true
console.workspace = true
starknet-types-core.workspace = true
starknet.workspace = true
cheatnet = { path = "../cheatnet" }
data-transformer = { path = "../data-transformer" }
serde_json.workspace = true
rayon.workspace = true
