[package]
name = "debugging"
version = "1.0.0"
edition.workspace = true

[dependencies]
starknet_api.workspace = true
blockifier.workspace = true
ptree.workspace = true
paste.workspace = true
console.workspace = true
starknet-types-core.workspace = true
starknet.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-starknet-classes.workspace = true
cheatnet = { path = "../cheatnet" }
data-transformer = { path = "../data-transformer" }
serde_json.workspace = true
rayon.workspace = true
