[package]
name = "docs"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
regex = "1.11.1"
shell-words = "1.1.0"
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
camino.workspace = true
tempfile.workspace = true

[features]
testing = []
