[package]
name = "docs"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
shell-words.workspace = true
walkdir.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
camino.workspace = true
tempfile.workspace = true
anyhow.workspace = true

[features]
testing = []
