[package]
name = "forge_runner"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
blockifier.workspace = true
cairo-felt.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-sierra-ap-change.workspace = true
cairo-lang-sierra-gas.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-sierra-type-size.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-utils.workspace = true
cairo-vm = "0.8.1"
camino.workspace = true
cheatnet = { path = "../cheatnet" }
console.workspace = true
conversions = { path = "../conversions" }
flatten-serde-json.workspace = true
futures.workspace = true
itertools.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
once_cell.workspace = true
rand.workspace = true
runtime = { path = "../runtime" }
scarb-artifacts = { path = "../scarb-artifacts" }
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true
snforge-test-collector-interface.workspace = true
starknet.workspace = true
starknet_api.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
url.workspace = true
