[package]
name = "forge_runner"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-sierra-type-size.workspace = true
cairo-lang-sierra-gas.workspace = true
cairo-lang-sierra-ap-change.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-annotations.workspace = true
starknet-types-core.workspace = true
starknet_api.workspace = true
starknet.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
smol_str.workspace = true
num-integer.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand.workspace = true
url.workspace = true
blockifier.workspace = true
cairo-vm.workspace = true
itertools.workspace = true
indoc.workspace = true
camino.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
serde_json.workspace = true
semver.workspace = true
console.workspace = true
serde.workspace = true
bimap.workspace = true
flatten-serde-json.workspace = true
rayon.workspace = true
cheatnet = { path = "../cheatnet" }
runtime = { path = "../runtime" }
conversions = { path = "../conversions" }
scarb-api = { path = "../scarb-api" }
shared = { path = "../shared" }
universal-sierra-compiler-api = { path = "../universal-sierra-compiler-api" }
fs4.workspace = true
which.workspace = true
