[package]
name = "forge_runner"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-sierra-type-size.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-annotations.workspace = true
starknet-types-core.workspace = true
starknet_api.workspace = true
starknet.workspace = true
futures.workspace = true
tokio.workspace = true
num-traits.workspace = true
rand.workspace = true
url.workspace = true
blockifier.workspace = true
cairo-vm.workspace = true
itertools.workspace = true
indoc.workspace = true
camino.workspace = true
toml_edit.workspace = true
serde_json.workspace = true
semver.workspace = true
console.workspace = true
serde.workspace = true
rayon.workspace = true
cheatnet = { path = "../cheatnet" }
runtime = { path = "../runtime" }
conversions = { path = "../conversions" }
scarb-api = { path = "../scarb-api" }
shared = { path = "../shared" }
debugging = { path = "../debugging" }
universal-sierra-compiler-api = { path = "../universal-sierra-compiler-api" }
which.workspace = true
sanitize-filename.workspace = true
clap.workspace = true
foundry-ui ={ path = "../foundry-ui" }
