[package]
name = "forge"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
smoke = []
scarb_2_7_1 = []
scarb_since_2_10 = []
no_scarb_installed = []
debugging = ["forge_runner/debugging"]
assert_non_exact_gas = ["test_utils/assert_non_exact_gas"]

[dependencies]
anyhow.workspace = true
blockifier.workspace = true
camino.workspace = true
include_dir.workspace = true
starknet_api.workspace = true
shared.workspace = true
cheatnet = { path = "../cheatnet" }
conversions = { path = "../conversions" }
configuration = { path = "../configuration" }
scarb-api = { path = "../scarb-api" }
forge_runner = { path = "../forge-runner" }
universal-sierra-compiler-api = { path = "../universal-sierra-compiler-api" }
cairo-lang-sierra.workspace = true
cairo-annotations.workspace = true
cairo-lang-runnable-utils.workspace = true
starknet-types-core.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
starknet.workspace = true
num-bigint.workspace = true
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
rand.workspace = true
scarb-metadata.workspace = true
scarb-ui.workspace = true
semver.workspace = true
cairo-vm.workspace = true
# openssl is being used, please do not remove it!
openssl.workspace = true
toml_edit.workspace = true
tokio.workspace = true
futures.workspace = true
url.workspace = true
indoc.workspace = true

[[bin]]
name = "snforge"
path = "src/main.rs"

[dev-dependencies]
assert_fs.workspace = true
snapbox.workspace = true
test_utils = { path = "test_utils" }
axum.workspace = true
lazy_static.workspace = true
tempfile.workspace = true
cairo-lang-starknet-classes.workspace = true
walkdir.workspace = true
test-case.workspace = true
docs = { workspace = true, features = ["testing"] }
