[package]
name = "runtime"
version = "1.0.0"
edition.workspace = true

[features]
testing = []

[dependencies]
anyhow.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-starknet.workspace = true
cairo-felt.workspace = true
starknet_api.workspace = true
starknet.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
blockifier.workspace = true
cairo-vm.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
conversions = { path = "../conversions" }
scarb-api = { path = "../scarb-api" }
