[package]
name = "runtime"
version = "1.0.0"
edition.workspace = true

[features]
testing = []

[dependencies]
indoc.workspace = true
anyhow.workspace = true
conversions.workspace = true
cairo-lang-runner.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-utils.workspace = true
starknet-types-core.workspace = true
starknet_api.workspace = true
starknet.workspace = true
blockifier.workspace = true
cairo-vm.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
num-traits.workspace = true
