[package]
name = "scarb-api"
version = "1.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
assert_fs.workspace = true
camino.workspace = true
indoc.workspace = true
scarb-metadata.workspace = true
scarb-ui.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
which.workspace = true
semver.workspace = true
sierra-casm = { path="../sierra-casm" }
