[package]
name = "scarb-api"
version = "1.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
shared.workspace = true
camino.workspace = true
scarb-metadata.workspace = true
scarb-ui.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
which.workspace = true
semver.workspace = true
regex.workspace = true
rayon.workspace = true
itertools.workspace = true
universal-sierra-compiler-api = { path = "../universal-sierra-compiler-api" }
foundry-ui = { path = "../foundry-ui" }
cairo-native.workspace = true
native-api = { path = "../native-api" }

[dev-dependencies]
assert_fs.workspace = true
indoc.workspace = true
